tests/build/fail/widget_new/missing_field_multi.stderr
error: missing field `stops` in property initializer
  --> $DIR/missing_field_multi.rs:10:31
   |
10 |           background_gradient = {
   |  _______________________________^
11 | |             axis: 0.deg(),
12 | |         }
   | |_________^
